--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.9",
+    "react-syntax-highlighter": "^15.4.3",
     "tailwindcss": "^2.0.4"
   }
 }
