--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
    "routes": [
      {
-       "src": "/api",
-       "dest": "http://159.203.65.149:4000/api"
+       "src": "/api/",
+       "dest": "http://159.203.65.149:4000/api/"
      }
    ]
  }
