--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
    "routes": [
-     {
-       "src": "/api/",
-       "dest": "http://159.203.65.149:4000/api/"
-     }
+      {
+         "source": "/api/:path*",
+         "destination": "http://159.203.65.149:4000/api/:path*"
+      },
+      {
+         "source": "/api/:path*/",
+         "destination": "http://159.203.65.149:4000/api/:path*/"
+      }
    ]
- }
+}
