--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-   "routes": [
+   "rewrites": [
       {
          "source": "/api/:path*",
          "destination": "http://159.203.65.149:4000/api/:path*"
