--- a/vercel.json
+++ b/vercel.json
@@ -25,14 +25,6 @@
          "destination": "http://159.89.243.73:4000/images/:path*/"
       },
       {
-         "source": "/richicons/:path*",
-         "destination": "http://159.89.243.73:4000/richicons/:path*"
-      },
-      {
-         "source": "/richicons/:path*/",
-         "destination": "http://159.89.243.73:4000/richicons/:path*/"
-      },
-      {
          "source": "/media/:path*",
          "destination": "http://159.89.243.73:4000/media/:path*"
       },
@@ -58,11 +50,11 @@
       },
       {
          "source": "/socket/:path*",
-         "destination": "http://159.89.243.73:4000/socket/:path*"
+         "destination": "wss://159.89.243.73:4000/socket/:path*"
       },
       {
          "source": "/socket/:path*/",
-         "destination": "http://159.89.243.73:4000/socket/:path*/"
+         "destination": "wss://159.89.243.73:4000/socket/:path*/"
       },
       {
          "source": "/api/:path*",
