--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,14 @@
          "destination": "http://159.89.243.73:4000/pleroma/:path*/"
       },
       {
+         "source": "/pleroma/admin/:path*",
+         "destination": "http://159.89.243.73:4000/pleroma/admin/:path*"
+      },
+      {
+         "source": "/pleroma/admin/:path*/",
+         "destination": "http://159.89.243.73:4000/pleroma/admin/:path*/"
+      },
+      {
          "source": "/activities/:path*",
          "destination": "http://159.89.243.73:4000/activities/:path*"
       },
