--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
    "rewrites": [
       {
-         "source": "/pleroma/:path*/",
-         "destination": "http://159.89.243.73:4000/pleroma/:path*/"
+         "source": "/pleroma/:path*",
+         "destination": "http://159.89.243.73:4000/pleroma/:path*"
       },
       {
          "source": "/main/:path*",
