--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
       {
          "source": "/.well-known/webfinger",
          "destination": "http://159.89.243.73/.well-known/webfinger"
-      }
+      },
+      {
+         "source": "/.well-known/nodeinfo",
+         "destination": "http://159.89.243.73/.well-known/webfinger"
+      },
    ]
 }
