--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
    ],
    "rewrites": [
       {
+         "source": "/.well-known/hosts-meta",
+         "destination": "https://social.evansims.com/.well-known/hosts-meta"
+      },
+      {
          "source": "/.well-known/webfinger",
          "destination": "https://social.evansims.com/.well-known/webfinger"
       },
