feat: update theme

--- a/ghost-theme/package.json
+++ b/ghost-theme/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "author": {
     "name": "Evan Sims",
+    "email": "hello@evansims.com",
     "url": "https://evansims.com"
   },
   "config": {
