--- a/ghost-theme/package.json
+++ b/ghost-theme/package.json
@@ -13,6 +13,7 @@
   },
   "config": {
     "posts_per_page": 10,
+    "card_assets": true,
     "image_sizes": {
       "xs": {
         "width": 150
