--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       url: ${GHOST_URL:-https://evansims.com}
       NODE_ENV: ${NODE_ENV:-production}
       
+      # Development/debugging
+      paths__contentPath: /var/lib/ghost/content
+      
       # Mail configuration (optional - configure as needed)
       mail__transport: ${MAIL_TRANSPORT:-SMTP}
       mail__options__host: ${MAIL_HOST}
@@ -26,6 +29,9 @@ services:
     volumes:
       - ghost_content:/var/lib/ghost/content
       - ./ghost-theme:/var/lib/ghost/content/themes/evansims-theme
+      - ./ghost-entrypoint.sh:/usr/local/bin/ghost-entrypoint.sh:ro
+    entrypoint: ["/usr/local/bin/ghost-entrypoint.sh"]
+    command: ["node", "current/index.js"]
     depends_on:
       - db
     networks:
