--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,9 @@
 services:
-  nginx:
-    image: nginx:alpine
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx-mastodon.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - ghost
-    networks:
-      - ghost-network
-
   ghost:
     image: ghost:6.0.0-rc.0
     restart: always
-    expose:
-      - "2368"
+    ports:
+      - "2368:2368"
     environment:
       # Database configuration
       database__client: ${DATABASE_CLIENT:-mysql}
@@ -42,6 +30,7 @@ services:
       - ghost_content:/var/lib/ghost/content
       - ./ghost-theme:/var/lib/ghost/content/themes/evansims-theme
       - ./ghost-entrypoint.sh:/usr/local/bin/ghost-entrypoint.sh:ro
+      - ./ghost-redirects.yaml:/var/lib/ghost/content/data/redirects.yaml:ro
     entrypoint: ["/usr/local/bin/ghost-entrypoint.sh"]
     command: ["node", "current/index.js"]
     depends_on:
