--- a/Caddyfile
+++ b/Caddyfile
@@ -1,11 +1,19 @@
 :80 {
     # Route ActivityPub endpoints to the ActivityPub service
     handle /.ghost/activitypub* {
-        reverse_proxy activitypub:8080
+        reverse_proxy activitypub:8080 {
+            header_up X-Forwarded-Proto {http.request.scheme}
+            header_up X-Forwarded-Host {http.request.host}
+            header_up X-Real-IP {http.request.remote.host}
+        }
     }
     
     # Route everything else to Ghost
     handle {
-        reverse_proxy ghost:2368
+        reverse_proxy ghost:2368 {
+            header_up X-Forwarded-Proto {http.request.scheme}
+            header_up X-Forwarded-Host {http.request.host}
+            header_up X-Real-IP {http.request.remote.host}
+        }
     }
 }
