feat: update admin service

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -4,6 +4,9 @@ FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=UTC
 
+# Pre-configure tzdata
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 # Install MySQL client and other useful administrative tools
 RUN apt-get update && apt-get install -y \
     mysql-client \
